--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-LOCAL_DB_ADDRESS=mongodb://localhost:27017/hj-shopping-mall
+LOCAL_DB_ADDRESS=mongodb+srv://khjoo1203:173429@cluster0.0kdpmf.mongodb.net/hj-shopping-mall
 PORT=5000
 NODE_ENV=development
